--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Legend of Zelda</title>
 </head>
 <body>
-    
+    <canvas></canvas>
     <script type="module" src="index.js"></script>
 </body>
 </html>
