--- a/index.html
+++ b/index.html
@@ -6,8 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Legend of Zelda</title>
 </head>
-<body>
-    <canvas></canvas>
+<body
+style="overflow-y: hidden"
+ >
+  <!-- style="overflow-y: hidden" -->
+
+    <div id="inventoryScreen">
+
+    </div>
+    <canvas style="bottom: -140px;
+    position: relative;"></canvas>
+
     <script type="module" src="index.js"></script>
 </body>
 </html>
