changes to beginning of inventory. Removed the eventBus fire from picking up the sword

--- a/index.html
+++ b/index.html
@@ -6,17 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Legend of Zelda</title>
 </head>
-<body
-style="overflow-y: hidden"
- >
-  <!-- style="overflow-y: hidden" -->
+<body>
+    <!-- <canvas style="bottom: -140px;
+    position: relative; left: 0px;"></canvas> -->
 
+    <canvas style=" aspect-ratio: 1120 / 770; position: absolute;
+    top: 140px;"></canvas>
     <div id="inventoryScreen">
 
     </div>
-    <canvas style="bottom: -140px;
-    position: relative;"></canvas>
-
     <script type="module" src="index.js"></script>
 </body>
 </html>
