--- a/index.html
+++ b/index.html
@@ -7,14 +7,15 @@
     <title>Legend of Zelda</title>
 </head>
 <body>
-    <!-- <canvas style="bottom: -140px;
-    position: relative; left: 0px;"></canvas> -->
 
-    <canvas style=" aspect-ratio: 1120 / 770; position: absolute;
+
+    <canvas style="aspect-ratio: 1120 / 770; position: absolute;
     top: 140px;"></canvas>
-    <div id="inventoryScreen">
-
-    </div>
+    <canvas style="height: 770px; width: 1122px; aspect-ratio: 1120 / 770; position: absolute;  left: 77px; 
+    top: -558px;
+    /* top:0px; */
+    "
+     id="inventoryScreen"></canvas>
     <script type="module" src="index.js"></script>
 </body>
 </html>
