--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
 
-    <canvas style="aspect-ratio: 1120 / 770; position: absolute;
+    <canvas id="gameScreen" style="aspect-ratio: 1120 / 770; position: absolute;
     top: 140px;"></canvas>
     <canvas style="height: 770px; width: 1122px; aspect-ratio: 1120 / 770; position: absolute;  left: 77px; 
     top: -558px;
