--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
 
-    <canvas style="width: 1000px; height: 1000px" id="gameScreen"></canvas>
+    <canvas style="aspect-ratio: 1120 / 770; position: absolute; top: 0px" id="gameScreen"></canvas>
     <script src="./index.js" type="module"></script>
 </body>
 
